--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Facebook - log in or sign up</title>
         <meta charset="UTF-8">
         <link rel="icon" href="fb logo.jpg" type="image/x-icon">
+        
     </head>
     <body style="background-color:rgb(236, 239, 244)">
         <style>
@@ -27,6 +28,8 @@
                         <input type="password", id="pwd", name="pwd" placeholder="&nbsp; Password", style="border-radius: 8px; width: 330px; height: 50px; font-size:medium;"><br>
                         <input style=" border-radius: 10px; width: 340px; height: 50px; font-size: x-large; background-color:rgb(29, 127, 225); color:mintcream;" type="submit", value="Log in">
                      <a style=" justify-content: center; font-size:medium; color:rgb(65, 128, 243)">  <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; forgotten password? </a>
+                        </form>
+                    <form action= "signup.html", method="post">
                         <input style=" width:auto;
                         height:auto; justify-content:center; margin: 70px; border-radius: 8px; width: 200px; height: 50px; font-size:medium; background-color:rgb(43, 202, 43); color:mintcream;" type="submit", value="Create new account">
                          <p style="background-color: rgb(236, 239, 244) ; font-size: small;"><strong> create a page</strong> for a celebrity, brand or business</p>
