--- a/signup.html
+++ b/signup.html
@@ -55,8 +55,7 @@
                 <input type="radio" name="options" id="important only">
                 <label for="important only">Important only</label><br>
             </fieldset>
-            <br><input type="submit", value="SUBMIT", style=" color:ghostwhite; background-color: dodgerblue;"> &nbsp; <input type="reset", value="CANCEL", style="color:ghostwhite; background-color:dodgerblue">
-            
+            <br><input type="submit", value="SUBMIT", style=" color:ghostwhite; background-color:rgb(29, 127, 225);  border-radius: 10px; width: 80px; height: 30px; font-size: medium;"> &nbsp; <input type="reset", value="CANCEL", style="color:ghostwhite; border-radius: 10px; width: 80px; height: 30px; font-size: medium; background-color:rgb(29, 127, 225); ">
         </form>
     </body>
 </html>
